# fletchat

./: .gitignore  1.py  2.py  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: all.yml  main.yml  release.yml
output/apk/: app-release.apk.sha1
output/web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  manifest.json  version.json
output/web/assets/app/: app.zip.hash
